--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "tsc": "tsc",
+    "start:prod": "node build/server.js"
   },
   "keywords": [],
   "author": "",
