--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.2",
     "ts-node": "^10.2.1",
@@ -23,5 +24,5 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
     "@types/request": "^2.48.12"
-  } 
+  }
 }
